// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-default t-button--variant-outline"
  >
    默认文字提示
  </button>
</DocumentFragment>
`;

exports[`customize.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-tooltip-demo"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      default
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      primary
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      success
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      danger
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      warning
    </button>
  </div>
</DocumentFragment>
`;

exports[`noArrow.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-default t-button--variant-outline"
  >
    不带箭头等文字提示
  </button>
</DocumentFragment>
`;

exports[`placement.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-tooltip-demo"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      top
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      bottom
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      left
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-base"
    >
      right
    </button>
  </div>
</DocumentFragment>
`;

exports[`trigger.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-tooltip-demo"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      悬浮时触发（默认）
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      点击时触发
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      右击时触发
    </button>
  </div>
</DocumentFragment>
`;
